--- a/src/app/button-show-password/button-show-password.component.html
+++ b/src/app/button-show-password/button-show-password.component.html
@@ -1,3 +1,3 @@
 <button mat-icon-button>
-	<mat-icon>{{ directive.show ? "visibility_off" : "visibility" }}</mat-icon>
+	<mat-icon>{{ show ? "visibility_off" : "visibility" }}</mat-icon>
 </button>
